--- a/kekule_wrapper.css
+++ b/kekule_wrapper.css
@@ -2,7 +2,8 @@
 .kekule_viewer_container {
 	width:100%;height:100%;
 	position:relative;
-	box-shadow:0px 1px 3px 0px rgba(0,0,0,1);
+	box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.3);
+	padding:0px 1px 1px 0px;
 }
 
 
